# chatgpt2api_basketikun

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  config.example.yaml  docker-compose.local.yml  docker-compose.warp.yml  docker-compose.yml  pyproject.toml
api/: accounts.py  ai.py  app.py  image_inputs.py  register.py  support.py  system.py  tasks.py
docs/: deployment.md  feature-status.en.md  question-answer.md  todo.md  常见问题说明.md
scripts/: init_proxy_config.py  migrate_storage.py
services/: account_service.py  codex_api.py  config.py  constants.py  content_filter.py  cpa_service.py  editable_file_task_service.py  image_service.py  image_storage_service.py  log_service.py  oauth_login_service.py  openai_backend_api.py  proxy_service.py  sub2api_service.py  task_service.py
services/account/: __init__.py  account_service.py  auth_service.py  cpa_service.py  oauth_login_service.py  sub2api_service.py
services/protocol/: anthropic_v1_messages.py  codex_api.py  conversation.py  openai_backend_api.py  (+3 more)
test/: test_account_export.py  test_account_image_capabilities.py  test_codex_api.py  test_codex_tool_call_image.py  test_config.py  test_gpt_ppt.py  test_gpt_psd.py  test_gpt_search.py  test_init_proxy_config.py  test_multi_image_results.py  test_proxy_runtime_api.py  test_proxy_runtime_config.py  test_register_account.py  utils.py
utils/: date_utils.py  helper.py  http_client.py  id_utils.py  json_utils.py  jwt_utils.py  sentinel.py  text_utils.py
web/: eslint.config.mjs  index.html  package.json  tsconfig.json  vite.config.ts
(+34 files in other folders)
