[project]
name = "chatgpt2api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "curl-cffi>=0.15.0",
    "fastapi>=0.136.0",
    "httpx[http2,socks]>=0.28.1",
    "pillow>=12.2.0",
    "pybase64>=1.4.3",
    "python-multipart>=0.0.26",
    "pyyaml>=6.0.3",
    "tiktoken>=0.12.0",
    "uvicorn>=0.44.0",
]

[dependency-groups]
dev = [
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true
